src/sass/X/system_popups/taskSwitcher.sass
#taskSwitcher
    position: relative
    opacity: 1
    display: flex
    flex: 0 0 0
    width: auto
    flex-flow: row nowrap
    justify-self: center
    justify-content: center
    align-self: center
    align-content: center
    border-radius: 10px
    padding: 0.4em
    column-gap: 0.4em
    background-color: var(--color-accent-400)

    .app
        display: flex
        flex-flow: column nowrap
        justify-content: center
        align-content: center
        border-radius: 10px
        text-align: center
        width: 9em
        height: 9em
        padding: 0.6em
        font-weight: 500
        background: none
        >*
            flex: 1 1 auto
        &:hover, &:focus
            background: var(--color-accent-900)
        .iconWrapper
            // padding: 0.3em
            display: flex
            flex-flow: column nowrap
            justify-self: center
            align-self: center
            justify-content: center
            align-content: center
            >img
                width: 5em
                height: 5em
            >span
                font-size: 4em
        .app_name
            overflow: hidden
            white-space: nowrap
            text-overflow: ellipsis
            font-size: 0.9em
            height: 0em

